--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>محقق خاص بالدار البيضاء détective privé casablanca</title>
+    <title>hhh</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/skins/color-1.css" />
     <meta name="description" content=" محقق خاص بالدار البيضاء     " />
