--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     />
     <meta
       name="description"
-      content="محقق خاص مغربي للتبع كل حالات الابتزاز و غيرها من الخدمات راسلني للمزيد من المعلومات"
+      content="هل تحتاج إلى محقق خاص؟ نحن نقدم خدمات المراقبة، التحقق من السوابق، البحث عن الأشخاص المفقودين والتحقيق في عمليات الاحتيال. اتصل بنا الآن! محقق خاص مغربي لتتبع كل حالات الابتزاز وغيرها من الخدمات. راسلني للمزيد من المعلومات."
+    />
+
+    <meta
+      name="keywords"
+      content="تحقيق خاص, محقق خاص, مراقبة, كشف الاحتيال, البحث عن الأشخاص, تحقيق أمني"
     />
 
     <link
