--- a/home.html
+++ b/home.html
@@ -13,10 +13,45 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+
     <meta
       name="description"
-      content="محقق خاص مغربي للتبع كل حالات الابتزاز و غيرها من الخدمات راسلني للمزيد من المعلومات"
+      content="Besoin d’un détective privé ? Nous offrons des services de surveillance, vérification d'antécédents, recherche de personnes disparues et enquêtes sur les fraudes. Contactez-nous !"
     />
+    <meta
+      name="keywords"
+      content="Détective privé, Enquêteur, Surveillance,
+    Vérification d'antécédents, Fraude, Recherche de personnes, Enquête,
+    casablanca"
+    />
+
+    <meta property="og:title" content="Détective Privé | محقق خاص" />
+    <meta
+      property="og:description"
+      content="Services professionnels d'enquête, de surveillance et de détection des fraudes. تحقيقات خاصة ومراقبة وكشف الاحتيال."
+    />
+    <meta
+      property="og:image"
+      content="https://www.votresite.com/images/enqueteur.jpg"
+    />
+
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+
+    <meta name="twitter:title" content="Détective Privé | محقق خاص" />
+    <meta
+      name="twitter:description"
+      content="Besoin d'un détective privé ? اتصل بنا للتحقيقات الخاصة"
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.votresite.com/images/enqueteur.jpg"
+    />
+
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="investigateur a casablanca" />
+    <meta name="language" content="fr, ar" />
 
     <link
       rel="stylesheet"
