--- a/home.html
+++ b/home.html
@@ -507,8 +507,8 @@
               <div class="contact-info-item padd-15">
                 <div class="icon"><i class="fa fa-phone"></i></div>
                 <h4>Téléphone</h4>
-                <a target="_blank" href="https://wa.me/+212 716-055685"
-                  >+212 716-055685</a
+                <a target="_blank" href="https://wa.me/+212665066015"
+                  >0665066015</a
                 >
               </div>
 
