--- a/service.html
+++ b/service.html
@@ -283,7 +283,7 @@
                   style="
                     background-color: rgba(0, 0, 0, 0);
                     background-repeat: no-repeat;
-                    background-image: url('https://www.marocinvestigation.com/uploads/images/detective-prive-casablanca-maroc.jpg');
+                    background-image: url('images/back3.jpg');
                     background-size: cover;
                     background-position: center center;
                     width: 100%;
@@ -546,7 +546,7 @@
       <div class="breadcrumbs-wrap data-grad-bg gf">
         <div class="container">
           <h1 class="page-title">
-            Détective Privé opérant à Casablanca au Maroc
+            Détective Privé opérant à Marrakech au Maroc
           </h1>
           <ul class="breadcrumbs">
             <li>
@@ -554,99 +554,12 @@
                 >Accueil</a
               >
             </li>
-            <li>Détective Privé opérant à Casablanca au Maroc</li>
+            <li>Détective Privé opérant à Marrakech au Maroc</li>
           </ul>
         </div>
       </div>
 
       <!-- servivces -->
-      <div class="page-section">
-        <div class="container">
-          <div class="features-area">
-            <div class="row">
-              <div class="col-sm-4 col-xs-6">
-                <div class="feature-item">
-                  <img
-                    src="images/logo.webp"
-                    alt="Qui sommes nous"
-                    class="lazy"
-                  />
-                  <div class="feature-inner">
-                    <h4>Qui sommes nous</h4>
-                    <p>
-                      Agence de Détective Privé au Maroc, à votre service depuis
-                      longtemps, est basée à Casablanca. Notre équipe se compose
-                      d’hommes et de femmes expérimentés, discrets et rigoureux,
-                      formés pour répondre à tous vos besoins en matière
-                      d’enquêtes privées.
-                    </p>
-                    <a href="#" class="info-btn">Lire plus</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 col-xs-6">
-                <div class="feature-item">
-                  <img src="images/imh.jpg" alt="L'equipe" class="lazy" />
-                  <div class="feature-inner">
-                    <h4>L'equipe</h4>
-                    <p>
-                      une solide équipe pluridisciplinaire.Maroc
-                      magicInvistigation détective privé Maroc est constituée
-                      d’une équipe homogène rompue aux techniques d’enquêtes
-                      quelles qu’elles de dé
-                    </p>
-                    <a href="images/logo.webp" class="info-btn">Lire plus</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 col-xs-6">
-                <div class="feature-item">
-                  <img
-                    src="images/back2.jpg"
-                    alt="Detective Privé"
-                    class="lazy"
-                  />
-                  <div class="feature-inner">
-                    <h4>Detective Privé</h4>
-                    <p>
-                      Un enquêteur detective privé professionnel a Casablanca
-                      devrait généralement avoir des bases en matière
-                      d'application de la loi ou toute autre expérience
-                      pertinente et une formation de détective privé, pour
-                      savoir les techniques
-                    </p>
-                    <a href="#" class="info-btn">Lire plus</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Main Content Section -->
-
-      <!-- Call Out Section -->
-      <div class="call-out">
-        <div class="container">
-          <div class="align-center">
-            <h3>
-              Laissez-nous vous aider à trouver une solution qui répond à vos
-              besoins
-            </h3>
-            <div class="button-holder">
-              <a href="contact.html" class="btn btn-big">Contactez nous</a>
-              <p>
-                Ou appeler
-                <a href="https://wa.me/212665066015" style="color: #fff">
-                  <span>+212665066015</span></a
-                >
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <div class="page-section-bg3">
         <div class="container">
           <div class="align-center">
@@ -695,11 +608,7 @@
                   <div class="item-box">
                     <i class="fa-solid fa-wrench"></i>
                     <h5 class="icons-box-title">
-                      <a
-                        href="https://www.marocinvestigation.com/service/37-Détective-privé-anti-sextorsion.html"
-                      >
-                        Donner des informations confidentielles</a
-                      >
+                      <a href="#"> Donner des informations confidentielles</a>
                     </h5>
                     <p>
                       Fournir des informations confidentielles avec exactitude
@@ -839,107 +748,24 @@
         </div>
       </div>
 
-      <div id="content">
-        <div class="relative">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d106376.70261828904!2d-7.586992499999999!3d33.572287499999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7cd4778aa113b%3A0xb06c1d84f310fd3!2z2KfZhNiv2KfYsSDYp9mE2KjZiti22KfYoQ!5e0!3m2!1sar!2sma!4v1742249464780!5m2!1sar!2sma"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-        <div class="page-section">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6">
-                <h2>Contactez nous</h2>
-                <p>
-                  Laissez-nous lever tous vos doutes et prendre en charge vos
-                  préoccupations. Notre équipe de détectives privés mettra tout
-                  en œuvre pour vous apporter les preuves nécessaires,
-                  transformant ainsi l’incertitude en certitude.
-                </p>
-                <form
-                  class="contact-form form-style1 fx-cols-2"
-                  method="post"
-                  accept-charset="utf-8"
+      <!-- Main Content Section -->
+
+      <!-- Call Out Section -->
+      <div class="call-out">
+        <div class="container">
+          <div class="align-center">
+            <h3>
+              Laissez-nous vous aider à trouver une solution qui répond à vos
+              besoins
+            </h3>
+            <div class="button-holder">
+              <a href="contact.html" class="btn btn-big">Contactez nous</a>
+              <p>
+                Ou appeler
+                <a href="https://wa.me/212665066015" style="color: #fff">
+                  <span>+212665066015</span></a
                 >
-                  <input
-                    type="hidden"
-                    name="csrf_test_name"
-                    value="75e5131c99c2d176d3a465fa07782a04"
-                  />
-                  <div class="form-column">
-                    <input
-                      type="text"
-                      name="nom"
-                      value=""
-                      placeholder="Nom & prénom"
-                    />
-                  </div>
-                  <div class="form-column">
-                    <input
-                      type="text"
-                      name="email"
-                      value=""
-                      placeholder="Email"
-                    />
-                  </div>
-                  <div class="form-column">
-                    <input
-                      type="text"
-                      name="sujet"
-                      value=""
-                      placeholder="sujet"
-                    />
-                  </div>
-                  <div class="form-column">
-                    <input
-                      type="text"
-                      name="tel"
-                      value=""
-                      placeholder="Téléphone"
-                    />
-                  </div>
-                  <div class="form-column-full">
-                    <textarea
-                      name="message"
-                      rows="4"
-                      value=""
-                      placeholder="Message"
-                    ></textarea>
-                  </div>
-                  <div class="form-column-full">
-                    <button type="submit" class="btn">Envoyer message</button>
-                  </div>
-                </form>
-              </div>
-              <div class="col-md-6 col-sm-6">
-                <h5 class="fw-medium">Notre bureau</h5>
-                <p>Casablanca, Maroc</p>
-                <ul class="contact-info">
-                  <li>
-                    <i
-                      style="font-size: 1rem; color: #fff; margin: 0 0.6rem"
-                      class="fas fa-phone"
-                    ></i>
-                    <a href="tel://+212665066015">+212665066015</a>
-                  </li>
-                  <li>
-                    <i
-                      style="font-size: 1rem; color: #fff; margin: 0 0.6rem"
-                      class="fa fa-envelope"
-                    ></i>
-                    <a href="mailto:comapnymagic@gmail.com"
-                      >comapnymagic@gmail.com</a
-                    >
-                  </li>
-                </ul>
-                <hr />
-              </div>
+              </p>
             </div>
           </div>
         </div>
