--- a/det.html
+++ b/det.html
@@ -8,8 +8,7 @@
     />
     <meta name="format-detection" content="telephone=no" />
     <title>
-      Cherchez Un Détective Privé à Casablanca - Maroc - Agence
-      magicInvistigation Maroc
+مكتب المحقق الخاص في المغرب الدار البيضاء الرباط مراكش
     </title>
     <meta
       name="keywords"
