--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <meta property="og:type" content="article" />
     <meta
       property="og:title"
-      content="Cherchez Un Détective Privé à Casablanca - Maroc"
+      content="Cherchez Un Détective Privé à  - Maroc"
     />
     <meta
       property="og:description"
-      content="La Première Agence De Detective Privé Au Maroc Casablanca / Private Detective Morocco محقق خاص الدار البيضاء المغرب"
+      content="La Première Agence De Detective Privé Au Maroc  / Private Detective Morocco محقق خاص الدار البيضاء المغرب"
     />
     <meta property="og:image" content="invistigateur" />
     <link rel="shortcut icon" href="images/logo.webp" type="image/x-icon" />
@@ -84,7 +84,7 @@
           <div class="container">
             <div class="table-row">
               <div class="col-sm-6">
-                <h2>investigation detective privé a Casablanca.</h2>
+                <h2>investigation detective privé au maroc </h2>
               </div>
               <div class="col-sm-6">
                 <ul class="social-icons style-2">
@@ -442,7 +442,7 @@
                         transform-origin: 50% 50% 0px;
                       "
                     >
-                      Le N°1 détective privée à Casablanca
+                      Le N°1 détective privée au maroc ( Casablnca , Tanger , rabat ,Marrakech , agadir ... )
                     </div>
                   </div>
                 </div>
@@ -545,7 +545,7 @@
       <div class="breadcrumbs-wrap data-grad-bg gf">
         <div class="container">
           <h1 class="page-title">
-            Détective Privé opérant à Casablanca au Maroc
+            Détective Privé opérant  au Maroc
           </h1>
           <ul class="breadcrumbs">
             <li>
@@ -553,7 +553,7 @@
                 >Accueil</a
               >
             </li>
-            <li>Détective Privé opérant à Casablanca au Maroc</li>
+            <li>Détective Privé opérant  au Maroc</li>
           </ul>
         </div>
       </div>
@@ -574,7 +574,7 @@
                     <h4>Qui sommes nous</h4>
                     <p>
                       Agence de Détective Privé au Maroc, à votre service depuis
-                      longtemps, est basée à Casablanca. Notre équipe se compose
+                      longtemps, est basée à Casablanca , Tanger , rabat ,Marrakech , agadir Notre équipe se compose
                       d’hommes et de femmes expérimentés, discrets et rigoureux,
                       formés pour répondre à tous vos besoins en matière
                       d’enquêtes privées.
@@ -1055,3 +1055,4 @@
     </script>
   </body>
 </html>
+
