--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
     />
     <meta
       name="description"
-      content="Cherchez-vous un détective, un enquêteur, une agence de détectives privées au Maroc? Détective privé à Casablanca est votre allié professional."
+      content="Cherchez-vous un détective, un enquêteur, une agence de détectives privées au Maroc? Détective privé à  est votre allié professional."
     />
     <meta
       name="google-site-verification"
@@ -84,7 +84,7 @@
           <div class="container">
             <div class="table-row">
               <div class="col-sm-6">
-                <h2>investigation detective privé a Casablanca.</h2>
+                <h2>investigation detective privé au maroc</h2>
               </div>
               <div class="col-sm-6">
                 <ul class="social-icons style-2">
@@ -442,7 +442,7 @@
                         transform-origin: 50% 50% 0px;
                       "
                     >
-                      Le N°1 détective privée à Casablanca
+                      Le N°1 détective privée au maroc ( Casablance , Tanger , rabat ,Marrakech , agadir)
                     </div>
                   </div>
                 </div>
@@ -881,3 +881,4 @@
     </script>
   </body>
 </html>
+
