--- a/contact.html
+++ b/contact.html
@@ -73,10 +73,45 @@
           display: block !important;
         }
       }
+        .whatsapp-float{
+    position: fixed;
+    right: 18px;
+    bottom: 18px;
+    width: 56px;
+    height: 56px;
+    background: #25D366;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    box-shadow: 0 8px 20px rgba(0,0,0,.2);
+    z-index: 9999;
+    transition: transform .2s ease, box-shadow .2s ease;
+  }
+  .whatsapp-float:hover{
+    transform: translateY(-2px);
+    box-shadow: 0 10px 24px rgba(0,0,0,.24);
+  }
+  @media (max-width: 640px){
+    .whatsapp-float{ right: 14px; bottom: 14px; width: 52px; height: 52px; }
+  }
     </style>
   </head>
 
   <body class="wide-layout">
+<a
+  href="https://wa.me/212600000000?text=Salam%20bghit%20n3raf%20aktar%20👋"
+  class="whatsapp-float"
+  target="_blank"
+  rel="noopener"
+  aria-label="WhatsApp chat"
+  title="WhatsApp"
+>
+  <!-- WhatsApp SVG icon -->
+  <svg viewBox="0 0 32 32" width="28" height="28" aria-hidden="true">
+    <path fill="#fff" d="M19.11 17.22c-.27-.14-1.58-.78-1.83-.87-.25-.09-.43-.14-.61.14-.18.27-.7.86-.86 1.03-.16.18-.32.2-.59.07-.27-.14-1.11-.41-2.11-1.3-.78-.69-1.3-1.54-1.45-1.8-.15-.27-.02-.41.12-.55.12-.12.27-.32.41-.48.14-.16.18-.27.27-.45.09-.18.05-.34-.02-.48-.07-.14-.61-1.47-.84-2.01-.22-.53-.44-.46-.61-.46h-.52c-.18 0-.48.07-.73.34-.25.27-.96.94-.96 2.29 0 1.35.99 2.66 1.13 2.84.14.18 1.95 2.98 4.73 4.11.66.28 1.18.45 1.59.58.67.21 1.29.18 1.77.11.54-.08 1.58-.64 1.81-1.26.22-.62.22-1.15.16-1.26-.07-.11-.25-.18-.52-.32z"/>
+    <path fill="#fff" d="M16 3.2C9.49 3.2 4.2 8.49 4.2 15c0 2.05.55 3.98 1.51 5.64L4 29l8.58-1.66A11.7 11.7 0 0 0 16 26.8c6.51 0 11.8-5.29 11.8-11.8S22.51 3.2 16 3.2zm0 21.2c-1.83 0-3.55-.49-5.03-1.35l-.36-.21-5.02.97.96-4.89-.23-.38A9.68 9.68 0 1 1 25.68 15 9.69 9.69 0 0 1 16 24.4z"/>
+  </svg>
+</a>
     <div id="wrapper" class="wrapper-container">
       <!-- Header Section -->
       <header id="header" class="header-5">
@@ -463,4 +498,5 @@
     </script>
   </body>
 </html>
+
 
