--- a/det.html
+++ b/det.html
@@ -111,16 +111,17 @@
   </head>
 
   <body class="wide-layout">
-       <a
-      href="https://wa.me/212600000000?text=Salam%20bghit%20aktar%20👋"
-      class="whatsapp-float"
-      target="_blank"
-      rel="noopener"
-      aria-label="WhatsApp chat"
-      title="WhatsApp"
-    >
-      <i class="fab fa-whatsapp fa-lg" style="color: white"></i>
-    </a>
+  <a
+  href="https://wa.me/+212665066015?text=السلام%20عليكم%20اود%20معلومات%20اكثر%20من%20فضلك"
+  class="whatsapp-float"
+  target="_blank"
+  rel="noopener"
+  aria-label="WhatsApp chat"
+  title="WhatsApp"
+>
+  <i class="fab fa-whatsapp fa-lg" style="color:white;"></i>
+</a>
+
     <div id="wrapper" class="wrapper-container">
       <!-- Header Section -->
       <header id="header" class="header-5">
@@ -605,4 +606,5 @@
     </script>
   </body>
 </html>
+
 
