--- a/index.html
+++ b/index.html
@@ -108,17 +108,16 @@
   </head>
 
   <body class="wide-layout">
-       <a
-  href="https://wa.me/+212665066015?text=السلام%20عليكم%20اود%20معلومات%20اكثر%20من%20فضلك"
-  class="whatsapp-float"
-  target="_blank"
-  rel="noopener"
-  aria-label="WhatsApp chat"
-  title="WhatsApp"
->
-  <i class="fab fa-whatsapp fa-lg" style="color:white;"></i>
-</a>
-
+    <a
+      href="https://wa.me/+212665066015?text=bonjour"
+      class="whatsapp-float"
+      target="_blank"
+      rel="noopener"
+      aria-label="WhatsApp chat"
+      title="WhatsApp"
+    >
+      <i class="fab fa-whatsapp fa-lg" style="color: white"></i>
+    </a>
      <header id="header" class="header-5">
         <div class="top-bar">
           <div class="container">
@@ -1098,6 +1097,7 @@
     </script>
   </body>
 </html>
+
 
 
 
