--- a/contact.html
+++ b/contact.html
@@ -368,7 +368,7 @@
               </div>
               <div class="col-md-6 col-sm-6">
                 <h5 class="fw-medium">Notre bureau</h5>
-                <p>Casablanca, Maroc</p>
+                <p>Casablanca , Tanger , rabat ,Marrakech , agadir</p>
                 <ul class="contact-info">
                   <li>
                     <i
@@ -529,6 +529,7 @@
     </script>
   </body>
 </html>
+
 
 
 
