--- a/index.html
+++ b/index.html
@@ -882,16 +882,7 @@
 
       <div id="content">
         <div class="relative">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d106376.70261828904!2d-7.586992499999999!3d33.572287499999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7cd4778aa113b%3A0xb06c1d84f310fd3!2z2KfZhNiv2KfYsSDYp9mE2KjZiti22KfYoQ!5e0!3m2!1sar!2sma!4v1742249464780!5m2!1sar!2sma"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
+
         <div class="page-section">
           <div class="container">
             <div class="row">
@@ -960,7 +951,7 @@
               </div>
               <div class="col-md-6 col-sm-6">
                 <h5 class="fw-medium">Notre bureau</h5>
-                <p>Casablanca, Maroc</p>
+                <p>Casablanca, Tanger , rabat ,Marrakech , agadir  Maroc</p>
                 <ul class="contact-info">
                   <li>
                     <i
@@ -1097,6 +1088,7 @@
     </script>
   </body>
 </html>
+
 
 
 
