--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     </title>
     <meta
       name="keywords"
-      content="Agence De Detective, Detective Privé, Detective Maroc, Detective Casablanca, Private Detective Morocco"
+      content="Agence De Detective, Detective Privé, Detective Maroc, Detective Casablanca, Tanger , rabat ,Marrakech , agadir Private Detective Morocco"
     />
     <meta
       name="description"
-      content="Cherchez-vous un détective, un enquêteur, une agence de détectives privées au Maroc? Détective privé à Casablanca est votre allié professional."
+      content="Cherchez-vous un détective, un enquêteur, une agence de détectives privées au Maroc? Détective privé à Casablanca, Tanger , rabat ,Marrakech , agadir est votre allié professional."
     />
     <meta
       name="google-site-verification"
@@ -25,7 +25,7 @@
     <meta property="og:type" content="article" />
     <meta
       property="og:title"
-      content="Cherchez Un Détective Privé à  - Maroc"
+      content="Cherchez Un Détective Privé au Maroc"
     />
     <meta
       property="og:description"
@@ -1088,6 +1088,7 @@
     </script>
   </body>
 </html>
+
 
 
 
