--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="format-detection" content="telephone=no" />
     <title>
 مكتب المحقق الخاص في المغرب الدار البيضاء الرباط مراكش
+      Détective privé a casablnca , Tanger , rabat ,Marrakech , agadir
     </title>
     <meta
       name="keywords"
@@ -1088,6 +1089,7 @@
     </script>
   </body>
 </html>
+
 
 
 
