--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
     </title>
     <meta
       name="keywords"
-      content="Agence De Detective, Detective Privé, Detective Maroc, Detective Casablanca, Private Detective Morocco"
+      content="Agence De Detective, Detective Privé, Detective Maroc, Detective Casablanca , Tanger , rabat ,Marrakech , agadir, Private Detective Morocco"
     />
     <meta
       name="description"
-      content="Cherchez-vous un détective, un enquêteur, une agence de détectives privées au Maroc? Détective privé à Casablanca est votre allié professional."
+      content="Cherchez-vous un détective, un enquêteur, une agence de détectives privées au Maroc? Détective privéau maroc est votre allié professional."
     />
     <meta
       name="google-site-verification"
@@ -29,7 +29,7 @@
     />
     <meta
       property="og:description"
-      content="La Première Agence De Detective Privé Au Maroc Casablanca / Private Detective Morocco محقق خاص الدار البيضاء المغرب"
+      content="La Première Agence De Detective Privé Au Maroc Casablanca , Tanger , rabat ,Marrakech , agadir / Private Detective Morocco محقق خاص الدار البيضاء المغرب"
     />
     <meta property="og:image" content="invistigateur" />
     <link rel="shortcut icon" href="images/logo.webp" type="image/x-icon" />
@@ -529,6 +529,7 @@
     </script>
   </body>
 </html>
+
 
 
 
