--- a/det.html
+++ b/det.html
@@ -12,11 +12,11 @@
     </title>
     <meta
       name="keywords"
-      content="Agence De Detective, Detective Privé, Detective Maroc, Detective Casablanca, Private Detective Morocco"
+      content="Agence De Detective, Detective Privé, Detective Maroc, Detective Casablanca, Tanger , rabat ,Marrakech , agadir Private Detective Morocco"
     />
     <meta
       name="description"
-      content="Cherchez-vous un détective, un enquêteur, une agence de détectives privées au Maroc? Détective privé à Casablanca est votre allié professional."
+      content="Cherchez-vous un détective, un enquêteur, une agence de détectives privées au Maroc? Détective privé à f est votre allié professional."
     />
     <meta
       name="google-site-verification"
@@ -606,6 +606,7 @@
     </script>
   </body>
 </html>
+
 
 
 
