--- a/service.html
+++ b/service.html
@@ -12,7 +12,7 @@
     </title>
     <meta
       name="keywords"
-      content="Agence De Detective, Detective Privé, Detective Maroc, Detective Casablanca, Private Detective Morocco"
+      content="Agence De Detective, Detective Privé, Detective Maroc, Detective Casablanca Tanger , rabat ,Marrakech , agadir, Private Detective Morocco"
     />
     <meta
       name="description"
@@ -29,7 +29,7 @@
     />
     <meta
       property="og:description"
-      content="La Première Agence De Detective Privé Au Maroc Casablanca / Private Detective Morocco محقق خاص الدار البيضاء المغرب"
+      content="La Première Agence De Detective Privé Au Maroc  / Private Detective Morocco محقق خاص الدار البيضاء المغرب"
     />
     <meta property="og:image" content="invistigateur" />
     <link rel="shortcut icon" href="images/logo.webp" type="image/x-icon" />
@@ -926,6 +926,7 @@
     </script>
   </body>
 </html>
+
 
 
 
