--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                       "
                     >
                       <a
-                        href="https://marocinvestigation.com/"
+                        href="https://wa.me/665066015"
                         class="btn btn-big btn-style-5"
                         style="
                           transition: none;
@@ -592,7 +592,7 @@
           </h1>
           <ul class="breadcrumbs">
             <li>
-              <a href="https://www.marocinvestigation.com/index.html"
+              <a href="https://www.magicinvestigation.pro/"
                 >Accueil</a
               >
             </li>
@@ -738,7 +738,7 @@
                     <i class="fa-solid fa-wrench"></i>
                     <h5 class="icons-box-title">
                       <a
-                        href="https://www.marocinvestigation.com/service/37-Détective-privé-anti-sextorsion.html"
+                        href="https://www.magicinvestigation.pro/"
                       >
                         Donner des informations confidentielles</a
                       >
@@ -1052,12 +1052,12 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://www.marocinvestigation.com/assets/js/scripts.min.js"></script>
-    <script src="https://www.marocinvestigation.com/assets/plugins/revolution/js/jquery.themepunch.tools.min.js?ver=5.0"></script>
-    <script src="https://www.marocinvestigation.com/assets/plugins/revolution/js/jquery.themepunch.revolution.min.js?ver=5.0"></script>
-    <script src="https://www.marocinvestigation.com/assets/js/jquery.lazy-master/jquery.lazy.min.js"></script>
-    <script src="https://www.marocinvestigation.com/assets/js/plugins.js"></script>
-    <script src="https://www.marocinvestigation.com/assets/js/script.js"></script>
+    <script src="https://www./assets/js/scripts.min.js"></script>
+    <script src="https://www./assets/plugins/revolution/js/jquery.themepunch.tools.min.js?ver=5.0"></script>
+    <script src="https://www./assets/plugins/revolution/js/jquery.themepunch.revolution.min.js?ver=5.0"></script>
+    <script src="https://www./assets/js/jquery.lazy-master/jquery.lazy.min.js"></script>
+    <script src="https://www./assets/js/plugins.js"></script>
+    <script src="https://www./assets/js/script.js"></script>
     <script>
       $(function () {
         $(".lazy").Lazy();
@@ -1089,6 +1089,7 @@
     </script>
   </body>
 </html>
+
 
 
 
