--- a/service.html
+++ b/service.html
@@ -563,7 +563,7 @@
                       "
                     >
                       <a
-                        href="https://marocinvestigation.com/"
+                        href="https://wa.me/665066015"
                         class="btn btn-big btn-style-5"
                         style="
                           transition: none;
@@ -594,7 +594,7 @@
           </h1>
           <ul class="breadcrumbs">
             <li>
-              <a href="https://www.marocinvestigation.com/index.html"
+              <a href="https://www.magicinvestigation.pro/"
                 >Accueil</a
               >
             </li>
@@ -926,6 +926,7 @@
     </script>
   </body>
 </html>
+
 
 
 
