--- a/index.html
+++ b/index.html
@@ -1050,6 +1050,15 @@
         </div>
       </footer>
     </div>
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-783958659"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-783958659');
+</script>
 
     <!-- Scripts -->
     <script src="https://www./assets/js/scripts.min.js"></script>
@@ -1089,6 +1098,7 @@
     </script>
   </body>
 </html>
+
 
 
 
