--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                           font-weight: 400;
                           font-size: 18px;
                         "
-                        >Lire plus</a
+                        >whatsap</a
                       >
                     </div>
                   </div>
@@ -1098,6 +1098,7 @@
     </script>
   </body>
 </html>
+
 
 
 
