--- a/service.html
+++ b/service.html
@@ -576,7 +576,7 @@
                           font-weight: 400;
                           font-size: 18px;
                         "
-                        >Lire plus</a
+                        >whatsap</a
                       >
                     </div>
                   </div>
@@ -926,6 +926,7 @@
     </script>
   </body>
 </html>
+
 
 
 
