--- a/contact.html
+++ b/contact.html
@@ -245,9 +245,9 @@
                       Email:
                       <a
                         href="mailto:
-                      comapnymagic@gmail.com"
+                      radiyossaf09@gmail.com"
                       >
-                        comapnymagic@gmail.comm</a
+                        radiyossaf09@gmail.com</a
                       >
                     </div>
                   </li>
@@ -382,8 +382,8 @@
                       style="font-size: 1rem; color: #fff; margin: 0 0.6rem"
                       class="fa fa-envelope"
                     ></i>
-                    <a href="mailto:comapnymagic@gmail.com"
-                      >comapnymagic@gmail.com</a
+                    <a href="mailto:radiyossaf09@gmail.com"
+                      >radiyossaf09@gmail.com</a
                     >
                   </li>
                 </ul>
@@ -529,6 +529,7 @@
     </script>
   </body>
 </html>
+
 
 
 
