--- a/det.html
+++ b/det.html
@@ -224,9 +224,9 @@
                       Email:
                       <a
                         href="mailto:
-                      comapnymagic@gmail.com"
+                      radiyossaf09@gmail.com"
                       >
-                        comapnymagic@gmail.comm</a
+                        radiyossaf09@gmail.com</a
                       >
                     </div>
                   </li>
@@ -606,6 +606,7 @@
     </script>
   </body>
 </html>
+
 
 
 
