--- a/contact.html
+++ b/contact.html
@@ -233,7 +233,7 @@
                     ></i>
                     <div>
                       Appelez-nous:
-                      <a href="tel://+212603511916">(+212) 6 65 06 60 15</a>
+                      <a href="tel://+212603511916">+212603511916</a>
                     </div>
                   </li>
                   <li>
@@ -529,6 +529,7 @@
     </script>
   </body>
 </html>
+
 
 
 
