--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ function gtag_report_conversion(url) {
                     ></i>
                     <div>
                       Appelez-nous:
-                      <a href="tel://+212665066015">(+212) 6 65 06 60 15</a>
+                      <a href="tel://+212665066015">+212603511916</a>
                     </div>
                   </li>
                   <li>
@@ -1117,6 +1117,7 @@ function gtag_report_conversion(url) {
     </script>
   </body>
 </html>
+
 
 
 
