--- a/service.html
+++ b/service.html
@@ -212,7 +212,7 @@
                     ></i>
                     <div>
                       Appelez-nous:
-                      <a href="tel://+212603511916">(+212) 6 65 06 60 15</a>
+                      <a href="tel://+212603511916">+212603511916</a>
                     </div>
                   </li>
                   <li>
@@ -926,6 +926,7 @@
     </script>
   </body>
 </html>
+
 
 
 
