--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@ function gtag_report_conversion(url) {
                       style="font-size: 1rem; color: #fff; margin: 0 0.6rem"
                       class="fas fa-phone"
                     ></i>
-                    <a href="tel://+212665066015">+212665066015</a>
+                    <a href="tel:+212603511916">+212603511916</a>
                   </li>
                   <li>
                     <i
@@ -1117,6 +1117,7 @@ function gtag_report_conversion(url) {
     </script>
   </body>
 </html>
+
 
 
 
