--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       content="Agence De Detective, Detective Privé, Detective Maroc, Detective Casablanca, Tanger , rabat ,Marrakech , agadir Private Detective Morocco"
     />
     <meta
-      name="description"
+      name="description"Laissez-nous vous 
       content="Cherchez-vous un détective, un enquêteur, une agence de détectives privées au Maroc? Détective privé à Casablanca, Tanger , rabat ,Marrakech , agadir est votre allié professional."
     />
     <meta
@@ -699,7 +699,7 @@ function gtag_report_conversion(url) {
               <a href="contact.html" class="btn btn-big">Contactez nous</a>
               <p>
                 Ou appeler
-                <a href="https://wa.me/212603511916" style="color: #fff">
+                <a href="https://wa.me/+212603511916" style="color: #fff">
                   <span>+212603511916</span></a
                 >
               </p>
@@ -1117,6 +1117,7 @@ function gtag_report_conversion(url) {
     </script>
   </body>
 </html>
+
 
 
 
