--- a/det.html
+++ b/det.html
@@ -112,7 +112,7 @@
 
   <body class="wide-layout">
     <a
-      href="https://wa.me/+212603511916?text=bonjour"
+      href="https://wa.me/212665066015?text=bonjour"
       class="whatsapp-float"
       target="_blank"
       rel="noopener"
@@ -212,7 +212,7 @@
                     ></i>
                     <div>
                       Appelez-nous:
-                      <a href="tel://+212603511916">+212603511916</a>
+                      <a href="tel://212665066015">212665066015</a>
                     </div>
                   </li>
                   <li>
@@ -486,8 +486,8 @@
               <a href="contact.html" class="btn btn-big">Contactez nous</a>
               <p>
                 Ou appeler
-                <a href="https://wa.me/+212603511916" style="color: #fff">
-                  <span>+212603511916</span></a
+                <a href="https://wa.me/212665066015" style="color: #fff">
+                  <span>212665066015</span></a
                 >
               </p>
             </div>
@@ -606,6 +606,7 @@
     </script>
   </body>
 </html>
+
 
 
 
