--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ function gtag_report_conversion(url) {
 
   <body class="wide-layout">
     <a
-      href="https://wa.me/+212603511916?text=bonjour"
+      href="https://wa.me/212665066015?text=bonjour"
       class="whatsapp-float"
       target="_blank"
       rel="noopener"
@@ -226,7 +226,7 @@ function gtag_report_conversion(url) {
                     ></i>
                     <div>
                       Appelez-nous:
-                      <a href="tel://+212665066015">+212603511916</a>
+                      <a href="tel://+212665066015">212665066015</a>
                     </div>
                   </li>
                   <li>
@@ -580,7 +580,7 @@ function gtag_report_conversion(url) {
                       "
                     >
                       <a
-                        href="https://wa.me/+212603511916"
+                        href="https://wa.me/212665066015"
                         class="btn btn-big btn-style-5"
                         style="
                           transition: none;
@@ -699,8 +699,8 @@ function gtag_report_conversion(url) {
               <a href="contact.html" class="btn btn-big">Contactez nous</a>
               <p>
                 Ou appeler
-                <a href="https://wa.me/+212603511916" style="color: #fff">
-                  <span>+212603511916</span></a
+                <a href="https://wa.me/212665066015" style="color: #fff">
+                  <span>212665066015</span></a
                 >
               </p>
             </div>
@@ -978,7 +978,7 @@ function gtag_report_conversion(url) {
                       style="font-size: 1rem; color: #fff; margin: 0 0.6rem"
                       class="fas fa-phone"
                     ></i>
-                    <a href="tel:+212603511916">+212603511916</a>
+                    <a href="tel:212665066015">212665066015</a>
                   </li>
                   <li>
                     <i
@@ -1117,6 +1117,7 @@ function gtag_report_conversion(url) {
     </script>
   </body>
 </html>
+
 
 
 
