--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
   <body class="bg-white text-gray-900">
     <!-- Navigation -->
-    <nav class="fixed w-full bg-white/95 backdrop-blur-sm shadow-sm z-50">
+     <nav class="fixed w-full bg-white/95 backdrop-blur-sm shadow-sm z-50">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-20">
           <!-- Logo -->
@@ -262,10 +262,10 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
               <span class="font-medium"
                 ><a
-                  href="mailto:contact@example.com"
+                  href="mailto:detectivefantome@gmail.com"
                   class="text-gray-700 hover:text-gray-900 font-medium"
                 >
-                  ✉️ contact@example.com
+                  ✉️detectivefantome@gmail.com
                 </a>
               </span>
             </div>
@@ -354,9 +354,18 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
           >
 
           <div class="flex flex-col text-left text-gray-700">
-            <span class="font-medium"><a href="">📞 +212 600 000 000</a></span>
             <span class="font-medium"
-              ><a href="">✉️ contact@example.com</a></span
+              ><a
+                href="tel:+212665066015"
+                class="text-gray-700 hover:text-gray-900 font-medium"
+              >
+                📞 +212 665 066 015
+              </a></span
+            >
+            <span class="font-medium"
+              ><a href="mailto:detectivefantome@gmail.com"
+                >✉️ detectivefantome@gmail.com</a
+              ></span
             >
           </div>
 
@@ -2228,6 +2237,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
   </body>
   </body>
 </html>
+
 
 
 
